# dawgdic-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  test-builder.rb
cmake/: CXXFlags.cmake
dawgdic/: Cargo.toml
dawgdic-sys/: Cargo.toml  bindings.h  build.rs
dawgdic-sys/libdawgdic/: .gitignore  CMakeLists.txt  LICENSE  test-builder.rb
dawgdic-sys/libdawgdic/include/: cdawgdic.h
dawgdic-sys/libdawgdic/src/: dawg-builder.cpp  dawg.cpp
dawgdic/src/: lib.rs
include/: cdawgdic.h
src/: dawg-builder.cpp  dawg-dictionary-builder.cpp  dawg-dictionary.cpp  dawg.cpp
